dhall/tests/type-errors/unit/MergeLhsNotRecord.txt
Type error: error: Merge1ArgMustBeRecord
 --> <current file>:1:0
  |
1 | merge True < x >.x
  | ^^^^^^^^^^^^^^^^^^ Merge1ArgMustBeRecord
  |
